# python_practice

my-homework/: .gitignore  bye.txt  hello.txt
my-homework/hw_1/: pyproject.toml
my-homework/hw_1/project_2/: pyproject.toml
my-homework/hw_10/: d-1.py  task_1.py  task_2.py  task_3.py  task_3_f1_f2.py  task_4.py
my-homework/hw_11/: task_1.py  task_2.py  task_3.py  task_4.py
my-homework/hw_12/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py
my-homework/hw_13/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
my-homework/hw_16/task_1/: Dockerfile  docker-compose.yml  pyproject.toml
my-homework/hw_16/task_1/app/achievements/: models.py
my-homework/hw_16/task_1/app/achievements/migrations/: 0001_initial.py
my-homework/hw_16/task_1/app/app/: asgi.py  settings.py  urls.py
my-homework/hw_16/task_1/app/hello/: urls.py
my-homework/hw_16/task_1/app/players/: models.py
my-homework/hw_16/task_1/app/players/migrations/: 0001_initial.py
my-homework/hw_16/task_1/app/vehicles/: apps.py  models.py
my-homework/hw_16/task_1/app/vehicles/migrations/: 0001_initial.py
my-homework/hw_17/: task.sql
my-homework/hw_2/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_example.py
my-homework/hw_3/: welcome.txt
my-homework/hw_4/: task_1.py  task_10.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
my-homework/hw_5/: task_1.py  task_10.py  task_11.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
python_basics/: py_vs_js.py
(+61 files in other folders)
