[tool.poetry]
name = "project-2"
version = "0.1.0"
description = ""
authors = ["OlgaShtante <51260907+OlgaShtante@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
requests = ">2.26.0"
Django = ">4.2.4=<5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
