[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Olga Shtante <olga.shtante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.22"
psycopg2 = "^2.9.9"
faker = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
